@@ -12,11 +12,13 @@ namespace scene
 
 //! constructor
 CSceneNodeAnimatorRotation::CSceneNodeAnimatorRotation(u32 time, const core::vector3df& rotation)
-: Rotation(rotation), StartTime(time)
+: Rotation(rotation)
 {
 	#ifdef _DEBUG
 	setDebugName("CSceneNodeAnimatorRotation");
 	#endif
+
+	StartTime = time;
 }
 
 
@@ -48,6 +50,8 @@ void CSceneNodeAnimatorRotation::animateNode(ISceneNode* node, u32 timeMs)
 //! Writes attributes of the scene node animator.
 void CSceneNodeAnimatorRotation::serializeAttributes(io::IAttributes* out, io::SAttributeReadWriteOptions* options) const
 {
+	ISceneNodeAnimator::serializeAttributes(out, options);
+
 	out->addVector3d("Rotation", Rotation);
 }
 
@@ -55,6 +59,8 @@ void CSceneNodeAnimatorRotation::serializeAttributes(io::IAttributes* out, io::S
 //! Reads attributes of the scene node animator.
 void CSceneNodeAnimatorRotation::deserializeAttributes(io::IAttributes* in, io::SAttributeReadWriteOptions* options)
 {
+	ISceneNodeAnimator::deserializeAttributes(in, options);
+
 	Rotation = in->getAttributeAsVector3d("Rotation");
 }
 
@@ -63,6 +69,7 @@ ISceneNodeAnimator* CSceneNodeAnimatorRotation::createClone(ISceneNode* node, IS
 {
 	CSceneNodeAnimatorRotation * newAnimator =
 		new CSceneNodeAnimatorRotation(StartTime, Rotation);
+	newAnimator->cloneMembers(this);
 
 	return newAnimator;
 }
